@@ -6,7 +6,7 @@ copyright_year   = 2018
 version          = 0.05
 
 [@Author::Plicease]
-:version       = 2.26
+:version       = 2.65
 release_tests  = 1
 installer      = Author::Plicease::MakeMaker
 test2_v0       = 1
@@ -25,14 +25,11 @@ remove = File::Basename
 
 [PruneFiles]
 filename = fbx.json
+filename = xt/author/pod_spelling_common.t
 match = ^Makefile$
 match = ^ffi/_build
 match = ^share/lib
 match = ^t/ffi/_build
-
-[Prereqs]
-FFI::Build = 0.84
-FFI::Platypus = 0.84
 
 [Prereqs / ConfigureRequires]
 -phase = configure
@@ -48,3 +45,4 @@ cpan = 1
 
 [FFI::Build]
 :version = 1.03
+
