@@ -4,7 +4,7 @@ use strict;
 use warnings;
 use 5.008001;
 use base qw( Exporter );
-use FFI::Platypus;
+use FFI::Platypus 1.00;
 use FFI::CheckLib 0.11 ();
 use File::Basename ();
 use Cwd ();
@@ -15,7 +15,7 @@ use Test2::EventFacet::Trace;
 # ABSTRACT: Tools for testing FFI
 # VERSION
 
-our @EXPORT = qw( ffi );
+our @EXPORT = qw( ffi ffi_options );
 
 =head1 SYNOPSIS
 
@@ -56,6 +56,46 @@ This Test2 Tools module provide some basic tools for testing FFI modules.
     }
 
     $singleton;
+  }
+
+=head1 FUNCTIONS
+
+=head2 ffi_options
+
+ ffi_options %options;
+
+This must be run before any C<< ffi-> >> functions.  Options available:
+
+=over 4
+
+=item api
+
+The L<FFI::Platypus> api level.  Zero (0) by default for backward compat,
+but it is recommended that you use One (1).
+
+=back
+
+=cut
+
+  sub ffi_options
+  {
+    my(undef, %options) = @_;
+    Carp::croak("Please call ffi_options before calling ffi")
+      if defined $singleton;
+
+    my $ffi = ffi();
+
+    my @new_args;
+
+    if(my $api = delete $options{api})
+    {
+      push @new_args, api => $api;
+    }
+
+    $ffi->{new_args} = \@new_args;
+
+    Carp::croak("Unknown option or options: @{[ sort keys %options ]}")
+      if %options;
   }
 }
 
@@ -119,9 +159,9 @@ sub _diag
 
 {
   local $ENV{FFI_PLATYPUS_DLERROR} = 1;
-  our $ffi = FFI::Platypus->new;
+  our $ffi = FFI::Platypus->new( api => 1 );
   our @closures = map { $ffi->closure($_) } \&_note, \&_diag, \&_pass, \&_fail;
-  $ffi->package;
+  $ffi->bundle;
   $ffi->type('(string,string,string,int,string)->void' => 'message_cb_t');
   $ffi
     ->function(t2t_simple_init => ['message_cb_t','message_cb_t','message_cb_t','message_cb_t'] => 'void')
@@ -129,8 +169,6 @@ sub _diag
 }
 
 package Test2::Tools::FFI::Single;
-
-=head1 FUNCTIONS
 
 =head2 ffi->runtime
 
@@ -145,7 +183,7 @@ sub runtime
   my($self) = @_;
 
   $self->{runtime} ||= (sub {
-    my $ffi = Test2::Tools::FFI::Platypus->new;
+    my $ffi = Test2::Tools::FFI::Platypus->new( @{ $self->{new_args} } );
 
     my @dll = File::Glob::bsd_glob("blib/lib/auto/share/dist/*/lib/*");
     if(@dll)
@@ -177,7 +215,7 @@ sub test
   my($self) = @_;
 
   $self->{test} ||= do {
-    my $ffi = Test2::Tools::FFI::Platypus->new;
+    my $ffi = Test2::Tools::FFI::Platypus->new( @{ $self->{new_args} } );
     my @lib = FFI::CheckLib::find_lib(
       lib => '*',
       libpath => 't/ffi/_build',
@@ -205,7 +243,7 @@ sub combined
   $self->{combined} ||= do {
     my $rt = $self->runtime;
     my $t  = $self->test;
-    my $ffi = Test2::Tools::FFI::Platypus->new;
+    my $ffi = Test2::Tools::FFI::Platypus->new( @{ $self->{new_args} } );
     $ffi->lib($rt->lib, $t->lib);
     $ffi;
   };
